2005-03-06 23:42  antirez

	* bench.tcl, jim.c, regtest.tcl, test.tcl: A specializing version
	  of [for] that appears able to match the performaces of Tcl8.4 for
	  the specialized forms. The implementation is a bit complex so may
	  contain bugs... to handle with care.	Also a [for] bug about
	  [continue] was fixed and the regression test added.

2005-03-06 11:43  antirez

	* ChangeLog, jim.c, jim.h, doc/AIO-Extension.txt: Fixed a race
	  condition in the garbage collection code.  In order to fix this,
	  now the hash table iterator works in a way that's save to delete
	  returned entries during the iteration.

2005-03-06 10:05  antirez

	* ChangeLog, doc/AIO-Extension.txt: AIO doc update

2005-03-06 10:03  antirez

	* ChangeLog, doc/AIO-Extension.txt: Documentation for the AIO
	  extension added

2005-03-06 09:48  antirez

	* ChangeLog, jim-aio.c: Added support for stdin/stdout/stderr to
	  AIO

2005-03-06 09:31  antirez

	* ChangeLog, Makefile, TODO, jim-aio.c, jim.c, jim.h: Added
	  Jim_GetEnum() API function. StringCoreCommand and AIO extension
	  modified to use this API. There are plenty of other places where
	  this will work better than the raw CompareStringImmediate().
	  Original idea from Tcl, Original implementation from Pat Thoyts,
	  I changed the implementationto use CSI and for automatic error
	  generation with all the valid options listed.

2005-03-05 23:06  patthoyts

	* jim.c: Free an objects internal representation before freeing the
	  string rep.

2005-03-05 22:11  antirez

	* ChangeLog, jim-aio.c: more AIO file methods.

2005-03-05 19:51  antirez

	* ChangeLog, jim-aio.c: ANSI I/O seek method implemented.

2005-03-05 16:04  antirez

	* ChangeLog, jim.c, jim.h: Solved a problem with Jim_Length()

2005-03-05 16:01  antirez

	* ChangeLog, Makefile, jim-aio.c, jim.c, jim.h: Initial version of
	  AIO (ANSI C I/O) extension added.  Some bit of const safeness. A
	  new API function to get the object length, Jim_Length().
